--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600');
 
 * {
-    padding: 0;
     margin: 0;
 }
 
 html {
-    padding: 0;
-    margin: 0;
     overflow-x: hidden;
 }
 
@@ -15,7 +12,6 @@ body {
     font-family: "Poppins", "sans-serif";
     background: #000000;
     color: #ffffff;
-    padding: 0;
 }
 
 
@@ -24,7 +20,7 @@ html, body {
 }
 
 .song-container {
-    min-height: 100%;
+    min-height: 75%;
     margin-bottom: -75px;
 }
 
@@ -41,12 +37,9 @@ h1 {
     text-align: left;
 }
 
-.player-container {
-    height: 75px;
-}
-
 .player {
     width: 100vw;
+    height: 75px;
     padding: 10px;
     background: red;
     position: fixed;
